# n8sight

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/roasts/: CRITIQUE.md
src/: action.rs  app.rs  cli.rs  cli_worker.rs  config.rs  event.rs  logging.rs  main.rs  scroll_state.rs  tui.rs
src/client/: http.rs  mock.rs  mod.rs
src/domain/: execution.rs  insights.rs  insights_compute.rs  mod.rs  workflow.rs
src/widgets/: execution_detail.rs  execution_list.rs  help.rs  insights.rs  mod.rs  node_detail.rs  status_bar.rs  tabs.rs  trigger_editor.rs  workflow_detail.rs  workflow_list.rs  workflow_node_inspect.rs
